Fixing gap between categories grid items 3

--- a/assets/front_end/classic/scss/components/_categories-grid.scss
+++ b/assets/front_end/classic/scss/components/_categories-grid.scss
@@ -51,13 +51,16 @@
     margin-bottom: 10px;
     @include breakpoint(sm) {
       margin: 0 10px 10px;
+      padding-bottom: 15px;
       flex-basis: calc(50% - 20px);
     }
     @include breakpoint(md) {
       margin-bottom: 15px;
+      padding-bottom: 10px;
       flex-basis: calc(33.333334% - 20px);
     }
     @include breakpoint(lg) {
+      padding-bottom: 0;
       flex-basis: calc(25% - 20px);
     }
   }
